# mqapp-crash

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: main.mq.rs  main.rs
